--- a/blockchain.ipynb
+++ b/blockchain.ipynb
@@ -85,6 +85,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'blockchain.ipynb',\n",
+       " 'constants.py',\n",
+       " 'derive',\n",
+       " 'env.bat',\n",
+       " 'hd-wallet-derive',\n",
+       " 'Images',\n",
+       " 'multi-blockchain-wallet.ipynb',\n",
+       " 'README.md',\n",
+       " 'wallet.py',\n",
+       " '__pycache__']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'blockchain.ipynb',\n",
+       " 'constants.py',\n",
+       " 'derive',\n",
+       " 'env.bat',\n",
+       " 'hd-wallet-derive',\n",
+       " 'Images',\n",
+       " 'multi-blockchain-wallet.ipynb',\n",
+       " 'README.md',\n",
+       " 'wallet.py',\n",
+       " '__pycache__']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\19802\\\\Desktop\\\\UNCC_Bootcamp\\\\Activities_Projects\\\\Blockchain-Python'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\19802\\Desktop\\UNCC_Bootcamp\\Activities_Projects\\Blockchain-Python\\hd-wallet-derive\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd \"hd-wallet-derive\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.gitignore',\n",
+       " 'composer.json',\n",
+       " 'composer.lock',\n",
+       " 'composer.phar',\n",
+       " 'doc',\n",
+       " 'hd-wallet-derive.php',\n",
+       " 'LICENSE',\n",
+       " 'README.md',\n",
+       " 'src',\n",
+       " 'tests',\n",
+       " 'vendor',\n",
+       " 'VERSION']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
