--- a/multi-blockchain-wallet.ipynb
+++ b/multi-blockchain-wallet.ipynb
@@ -559,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confirmation of "
+    "## Confirmation of Transaction"
    ]
   },
   {
